--- a/index.html
+++ b/index.html
@@ -6,6 +6,83 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hostel Paradise</title>
     <link rel="stylesheet" href="indstyle.css">
+    <style>
+        width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.room h3 {
+    margin-top: 15px;
+    font-size: 24px;
+}
+
+.room p {
+    margin-top: 10px;
+    font-size: 16px;
+}
+
+/* Contact Section */
+.contact {
+    padding: 50px 30px;
+    text-align: center;
+    background-color: #2c3e50;
+    color: white;
+}
+
+.contact h2 {
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+.contact p {
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.contact form {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.contact input,
+.contact textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    border: 1px solid #bdc3c7;
+    font-size: 16px;
+}
+
+.contact button {
+    width: 100%;
+    padding: 12px;
+    background-color: #3498db;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.contact button:hover {
+    background-color: #2980b9;
+}
+
+/* Footer */
+.footer {
+    background-color: #2c3e50;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+
+    </style>
 </head>
 <body>
     <!-- Navbar -->
